static/css/main.css
/* ... */
/**
 * Remove arrow in IE10 & IE11
 */

select::-ms-expand {
  display: none;
}

/**
 * Remove padding
 */

option {
  padding: 0;
}

/**
 * Reset to invisible
 */

fieldset {
  margin: 0;
  padding: 0;
  min-width: 0;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */

legend {
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  vertical-align: baseline;
}

/**
 * Remove the default vertical scrollbar in IE 10+.
 */

textarea {
  overflow: auto;
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the outline style in Safari.
 */

[type="search"] {
  outline-offset: -2px; /* 1 */
}

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/**
 * Clickable labels
 */

label[for] {
  cursor: pointer;
}

/* Interactive */
/* ============================================ */

/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */

details {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */

summary {
  display: list-item;
}

/*
 * Remove outline for editable content.
 */

[contenteditable] {
  outline: none;
}

/* Table */
/* ============================================ */

table {
  border-collapse: collapse;
  border-spacing: 0;
}

caption {
  text-align: left;
}

td,
th {
  vertical-align: top;
  padding: 0;
}

th {
  text-align: left;
  font-weight: bold;
}

/* Misc */
/* ============================================ */

/**
 * Add the correct display in IE 10+.
 */

template {
  display: none;
}

/**
 * Add the correct display in IE 10.
 */

[hidden] {
  display: none;
}
/* CSS Reset End */

body {
    font-family: 'Noto Sans JP', sans-serif;
}

h1 {
    font-size: 200%;
}

h2 {
    font-size: 150%;
}

p, i {
    font-family: 'Noto Sans JP', sans-serif;
    font-weight: 300;
    line-height: 1.4em;
}

b, strong {
    font-family: 'Noto Sans JP', sans-serif;
    font-weight: 700;
}

* {
    color: #2C2C2C;
}

.white-text * *{
    color: white;
}

a {
    transition: opacity 0.5s;
}

a:hover {
    opacity: 0.5;
    transition: opacity 0.5s;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

body.landing > * h1 {
    font-size: 200%;
    margin-bottom: 5px;
    font-weight: 700;
}

body.landing > * h2 {
    font-family: 'Noto Serif JP', serif;
    font-size: 125%;
    margin-bottom: 4px;
}

body.landing section p {
    font-size: 120%;
}

.header-logo {
    text-align: center;
}

.header-logo > a > img.logo {
    height: 130px;
    display: inline-block;
    margin: 11px auto 0px auto;
}

div.header-menu {
    width: 55%;
    margin: 0px auto;
}

.menu-container {
    display: flex;
    justify-content: center;
    margin-top: 15px;
    padding: 20px 0px;
    border-top: solid 1px #2C2C2C;
}

.menu-container > li {
    font-family: 'Montserrat', sans-serif;
    margin: 0px 20px;
}

header {
    border-bottom: solid 1px #B8E1FF;
}

#eye-catch {
    background-color: #EFEFEF;
}

#eye-catch > div {
    display: flex;
    align-items: center;
    padding: 10vh 0px;
    margin: 0px auto;
    width: 90%;
    max-width: 62em;
}

#eye-catch > div > div {
    flex-basis: 50%;
    display: block;
}

#eye-catch > div > div:nth-of-type(1) {
    padding-right: 60px;
    animation-name: fadein;
    animation-duration: 2.5s;
}
@keyframes fadein {
from {
    opacity: 0;
}
to {
    opacity: 1;
}
}

#eye-catch > div > div:nth-of-type(2) {
    padding: 50px 0px 50px 60px;
    border-left: solid 1px #6D6D6D;
}

#eye-catch > div > div > img {
    position: relative;
    width: 100%;
}

.main-card > h2 {
    width: 100%;
}

.main-card > a {
    display: block;
    text-align: right;
}

.more {
    font-size: 135%;
    position: relative;
    font-family: 'Noto Sans JP', sans-serif;
    color: #79D5FF;
}

.more i {
    position: relative;
    top: 3px;
    left: 10px;
}

#eye-catch > div > div > .more, #eye-catch > div > div > a > .more {
    color: #A61200;
}

.big-icon {
    font-size: 350%;
}

body.landing #community {
    background-color: #9D2D48;
}

div.center-title {
    margin: 50px auto;
}

div.center-title > h1, div.center-title > h2 {
    text-align: center;
}

.community-links {
    background-color: #7A162E;
}

.community-links > div {
    display: flex;
    align-content: center;
    margin: 0px auto;
    width: 90%;
    max-width: 62em;
}

div.community-card {
    flex: 1;
    display: flex;
    align-items: center;
    padding: 40px 0px;
}

div.community-card > i {
    flex: 1;
    padding-right: 30px;
}

div.community-card > p {
    flex: 9;
    border-left: solid 1px #FFF;
    font-family: 'Noto Sans JP', sans-serif;
}

.community-links > * p {
    padding: 30px;
}

div.community-button {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
}

div.community-button > * {
    flex: 1;
    text-align: center;
    font-family: 'Varela Round', sans-serif;
    padding: 15px;
    margin: 0px 15px;
    max-width: 200px;
    border-radius: 100px;
}

div.twitter-button > * {
    background-color: #00B9FF;
}

div.chat-button > * {
    background-color: #008E58;
}

.community-card > i.fa-twitter {
    color: #00B9FF;
}
/* ... */

